fixing white about section on mobile version

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,10 @@
   color-scheme: dark;
 }
 
+body {
+  background-color: rgb(21 16 48);
+}
+
 .hash-span {
   margin-top: -100px;
   padding-bottom: 100px;
